<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.stm.pertestbench.activity.param.ParamActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.stm.pertestbench.activity.param.ParamActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            android:background="@color/st_dark_blue"
            android:theme="@style/Theme.ActionBar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/modeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:onClick="@{() -> activity.toggleMode()}"
            android:text="@string/tx"
            android:textColor="#757575"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/modeSwitch"
            app:layout_constraintBottom_toTopOf="@+id/configureButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/txPowerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_power"
                android:textSize="18sp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/txPowerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:entries="@array/power_array"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txPowerLabel"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

            <TextView
                android:id="@+id/txFrequencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_frequency"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/txPowerSpinner"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/txFrequencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txFrequencyLabel"
                tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

            <TextView
                android:id="@+id/dataLengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_of_test_data"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/txFrequencySpinner"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/dataLengthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="37"
                android:hint="@string/enter_length"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataLengthLabel"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/packetPayloadLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/packet_payload"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/dataLengthEditText"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/packetPayloadSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/packet_payload_array"
                android:minHeight="48dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/packetPayloadLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/txPhyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phy"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/packetPayloadSpinner"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/txPhySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tx_phy_array"
                android:minHeight="48dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/txPhyLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/tx"
            app:layout_constraintBottom_toTopOf="@+id/configureButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/rxFrequencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rx_frequency"
                android:textSize="18sp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/rxFrequencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rxFrequencyLabel"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/rxPhyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phy"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/rxFrequencySpinner"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/rxPhySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/rx_phy_array"
                android:minHeight="48dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/rxPhyLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/modulationIndexLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulation_index"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/rxPhySpinner"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/modulationIndexSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/modulation_index_array"
                android:minHeight="48dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/modulationIndexLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/packetNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_packets"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@+id/rx"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/packetNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="1500"
            android:hint="@string/enter_number"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/packetNumberLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/configureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure"
            android:layout_margin="20dp"
            android:onClick="@{() -> activity.onButtonClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>