<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.stm.pertestbench.activity.scan.fragment.graph.GraphFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.stm.pertestbench.activity.scan.fragment.graph.GraphFragment">

        <TextView
            android:id="@+id/rssiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rssi"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/rssiGraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/rssiTitle"
            app:layout_constraintBottom_toTopOf="@id/perTitle"/>

        <TextView
            android:id="@+id/perTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/per"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rssiGraph"
            app:layout_constraintBottom_toTopOf="@+id/perGraph"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/perGraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/perTitle"
            app:layout_constraintBottom_toTopOf="@+id/dataTable"/>

        <TableLayout
            android:id="@+id/dataTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/clearButton">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rssi"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/ic_tlr_cell_shape"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/per"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/ic_tr_cell_shape"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/packets"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/ic_tr_cell_shape"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/packets_received"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/ic_tr_cell_shape"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/rssiText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:padding="10dp"
                    android:text="@string/_0"
                    android:background="@drawable/ic_tblr_cell_shape" />

                <TextView
                    android:id="@+id/perText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/_0"
                    android:background="@drawable/ic_tbr_cell_shape" />

                <TextView
                    android:id="@+id/totalPacketsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/_0"
                    android:background="@drawable/ic_tbr_cell_shape" />

                <TextView
                    android:id="@+id/receivedPacketsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/_0"
                    android:background="@drawable/ic_tbr_cell_shape" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{() -> fragment.clearGraphs()}"
            android:text="@string/clear_graphs"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/distanceEditText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{() -> fragment.saveData(false)}"
            android:text="@string/save_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clearButton"
            app:layout_constraintBottom_toTopOf="@+id/distanceEditText" />

        <EditText
            android:id="@+id/distanceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_distance"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>